istio/todolistapp/blue-green/todolistapp-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-v1
  namespace: demo1
  labels:
    app: todolist
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
      version: v1
  template:
    metadata:
      labels:
        app: todolist
        version: v1
    spec:
      serviceAccountName: todolist
      containers:
      - name: todolist
        image: todo-list-app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
