istio/todolistapp/blue-green/todolistapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo1
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: todolist
  namespace: demo1
  labels:
    app: todolist
    service: todolist
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: todolist
  # type: LoadBalancer
---
